--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "next-themes": "^0.4.6",
     "react": "^18",
     "react-dom": "^18",
-    "react-github-calendar": "^4.5.11",
+    "react-github-calendar": "4.5.11",
     "react-hook-form": "^7.48.2",
     "react-icons": "^4.12.0",
     "zod": "^3.22.4"
