--- a/package.json
+++ b/package.json
@@ -14,14 +14,17 @@
   "dependencies": {
     "@headlessui/react": "^2.2.9",
     "@hookform/resolvers": "^5.2.2",
+    "@react-email/components": "^1.0.1",
     "framer-motion": "^10.16.4",
     "next": "14.0.3",
     "next-themes": "^0.4.6",
     "react": "^18",
     "react-dom": "^18",
+    "react-email": "^5.0.4",
     "react-github-calendar": "4.5.11",
     "react-hook-form": "^7.48.2",
     "react-icons": "^4.12.0",
+    "resend": "^6.4.2",
     "zod": "^3.22.4"
   },
   "devDependencies": {
