--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@headlessui/react": "^2.2.9",
     "@hookform/resolvers": "^5.2.2",
     "@react-email/components": "^1.0.1",
+    "@react-email/render": "^2.0.0",
     "framer-motion": "^10.16.4",
     "next": "14.0.3",
     "next-themes": "^0.4.6",
